--- a/index.html
+++ b/index.html
@@ -69,24 +69,24 @@
                         </li>
                     </ul>
                     <div class="header__social">
-                        <ul class="header__social-list">
-                            <li class="header__social-item">
-                                <a href="#" class="header__social-link">
+                        <ul class="social-list">
+                            <li class="social-item">
+                                <a href="#" class="social-link">
                                     <img src="images/facebook.svg" alt="">
                                 </a>
                             </li>
-                            <li class="header__social-item">
-                                <a href="#" class="header__social-link">
+                            <li class="social-item">
+                                <a href="#" class="social-link">
                                     <img src="images/instagram.svg" alt="">
                                 </a>
                             </li>
-                            <li class="header__social-item">
-                                <a href="#" class="header__social-link">
+                            <li class="social-item">
+                                <a href="#" class="social-link">
                                     <img src="images/youtube.svg" alt="">
                                 </a>
                             </li>
-                            <li class="header__social-item">
-                                <a href="#" class="header__social-link">
+                            <li class="social-item">
+                                <a href="#" class="social-link">
                                     <img src="images/whatsapp.svg" alt="">
                                 </a>
                             </li>
@@ -209,7 +209,7 @@
                     let's go surf & sup
                 </h2>
             </div>
-            
+
             <div class="reviews__items">
                 <div class="reviews__item">
                     <img class="reviews-img" src="images/rew-1.jpeg" alt="">
@@ -262,45 +262,94 @@
     </section>
 
     <footer class="footer">
-        <div class="footer__top">
-           <h1 class="footer__title">
-            VILAMOURA SURF SCHOOL
-           </h1> 
-           <a href="#" class="footer__logo">
-                <img src="images/logo.png" alt="">
-           </a>
-        </div>
-        <div class="footer__info">
-            <dl class="footer__info-list">
-                <div class="footer__info-item">
-                    <dt>Surf School</dt>
-                    <dd>record n.325 <br>
-                        Portuguese Surfing Federation
-                    </dd>
-                    <dd>
-                        RNAAT registration 986/2016
-                    </dd>
-                </div>
-                <div class="footer__info-item">
-                    <dt>Adress</dt>
-                    <dd>record n.325 <br>
-                        Portuguese Surfing Federation
-                    </dd>
-                    <dd>
-                        Vilamoura - Algarve - Portugal
-                    </dd>
-                </div>
-                <div class="footer__info-item">
-                    <dt>Contacts</dt>
-                    <dd>
-                        Mobil and wattsapp <br>
-                        (+351) 912568342
-                    </dd>
-                    <dd>
-                        vilamourasurf@gmail.com
-                    </dd>
-                </div>
-            </dl>
+        <div class="footer__inner">
+            <div class="footer__top">
+                <h1 class="footer__title">
+                    VILAMOURA SURF SCHOOL
+                </h1>
+                <a href="#" class="footer__logo">
+                    <img src="images/logo.png" alt="">
+                </a>
+            </div>
+            <div class="footer__info">
+                <dl class="footer__info-list">
+                    <div class="footer__info-item">
+                        <dt>Surf School</dt>
+                        <dd>
+                            <span>record n.325</span>
+                            Portuguese Surfing Federation
+                        </dd>
+                        <dd>
+                            RNAAT registration 986/2016
+                        </dd>
+                    </div>
+                    <div class="footer__info-item">
+                        <dt>Adress</dt>
+                        <dd>
+                            <span>record n.325</span>
+                            Portuguese Surfing Federation
+                        </dd>
+                        <dd>
+                            Vilamoura - Algarve - Portugal
+                        </dd>
+                    </div>
+                    <div class="footer__info-item">
+                        <dt>Contacts</dt>
+                        <dd>
+                            <span>Mobil and wattsapp</span>
+                            <a href="tel:+351912568342">
+                                (+351) 912568342
+                            </a>
+                        </dd>
+                        <dd>
+                            <a href="mailto:vilamourasurf@gmail.com">
+                                vilamourasurf@gmail.com
+                            </a>
+                        </dd>
+                    </div>
+                </dl>
+            </div>
+            <div class="footer__bottom">
+                <ul class="social-list">
+                    <li class="social-item">
+                        <a href="#" class="social-link">
+                            <img src="images/facebook-w.svg" alt="">
+                        </a>
+                    </li>
+                    <li class="social-item">
+                        <a href="#" class="social-link">
+                            <img src="images/instagram-w.svg" alt="">
+                        </a>
+                    </li>
+                    <li class="social-item">
+                        <a href="#" class="social-link">
+                            <img src="images/youtube-w.svg" alt="">
+                        </a>
+                    </li>
+                    <li class="social-item">
+                        <a href="#" class="social-link">
+                            <img src="images/whatsapp-w.svg" alt="">
+                        </a>
+                    </li>
+                </ul>
+                <ul class="footer__nav">
+                    <li class="footer__nav-item">
+                        <a href="#" class="footer__nav-link">
+                            Terms and conditions
+                        </a>
+                    </li>
+                    <li class="footer__nav-item">
+                        <a href="#" class="footer__nav-link">
+                            Privacy policy
+                        </a>
+                    </li>
+                    <li class="footer__nav-item">
+                        <a href="#" class="footer__nav-link">
+                            Complaint book
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 
