--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container">
 
             <div class="header__top">
-                <nav class="menu">
+                <nav class="menu menu--open">
                     <button class="menu__btn">
                         <span></span>
                         <span></span>
